update webpack config and small fix

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <link rel="stylesheet" href="dist/main.css">
 </head>
 
 <body>
@@ -107,151 +107,29 @@
     </section>
 
     <section class="gallery">
-        <div class="carousel">
-            <a class="carousel-item modal-trigger" href="#modal1">
-                <img src="http://lh3.googleusercontent.com/--Eo4Pcyx9Pg41gpI8XoeLz5rhWeVBep2NFrK2IMw3hiUyecSShP6-vp5DAwS-at7busXB1B=w320-h320-n-no-v1">
-            </a>
-            <a class="carousel-item modal-trigger" href="#modal1">
-                <img src="http://lh3.googleusercontent.com/oGgpVUxYrDHPvKNDT0aJ7b3PBCX6KSqQ0zx76HGcB-OErL65gFMRPNnE6tZYlEsPl8c2tb7A=w320-h320-n-no-v1">
-            </a>
-            <a class="carousel-item modal-trigger" href="#modal1">
-                <img src="http://lh3.googleusercontent.com/BIzkhz3DYQ_mbdzIfE7x352C4kjyIAvaRLmbLwQzm0-zzYWBfe6GOtg4GoiBgLsvm5aTCul3=w320-h320-n-no-v1">
-            </a>
-            <a class="carousel-item modal-trigger" href="#modal1">
-                <img src="http://lh3.googleusercontent.com/-3d34J3HxcrjXHal9iBZK25BzeQs_oe4G-OxGtbThq5Afkf6VLjn-HbRionyzD3DjLcOu7XJ=w320-h320-n-no-v1">
-            </a>
-        </div>
-        <div id="modal1" class="modal gallery__modal">
-            <img class="gallery__modal--image" src="http://lh3.googleusercontent.com/-3d34J3HxcrjXHal9iBZK25BzeQs_oe4G-OxGtbThq5Afkf6VLjn-HbRionyzD3DjLcOu7XJ=w320-h320-n-no-v1">
-        </div>
-    </section>
-
-    <section class="contact">
         <div class="container">
-            <div class="contact__cards">
-
-                <div class="card contact__cards--data">
-                    <div class="card-content">
-                        <span class="card-title center">Dane kontaktowe</span>
-                        <ul class="collection">
-                            <li class="collection-item">
-                                <div>
-                                    <i class="black-text tiny material-icons center">local_phone</i> Ulica
-                                    <div class="secondary-content">
-                                        <span class="black-text">Obszerna 59</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="collection-item">
-                                <div>
-                                    <i class="black-text tiny material-icons center">local_phone</i> Kraj
-                                    <div class="secondary-content">
-                                        <span class="black-text">Polska</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="collection-item">
-                                <div>
-                                    <i class="black-text tiny material-icons center">local_phone</i> Miato
-                                    <div class="secondary-content">
-                                        <span class="black-text">Łódź</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="collection-item">
-                                <div>
-                                    <i class="black-text tiny material-icons center">local_phone</i> Kod pocztowy
-                                    <div class="secondary-content">
-                                        <span class="black-text">93-360</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="collection-item">
-                                <div>
-                                    <i class="black-text tiny material-icons center">local_phone</i> Telefon
-                                    <div class="secondary-content">
-                                        <span class="black-text">503 328 142</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="collection-item">
-                                <div>
-                                    <i class="black-text tiny material-icons center">local_phone</i> e-mail
-                                    <div class="secondary-content">
-                                        <span class="black-text">przykładowymail@gmail.pl</span>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="card contact__cards--hours">
-                    <div class="card-content">
-                        <span class="card-title center">Godziny pracy</span>
-                        <ul class="collection">
-                            <li class="collection-item">
-                                <div>Poniedziałek
-                                    <div class="secondary-content">
-                                        <span class="black-text">9-18</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="collection-item">
-                                <div>Wtorek
-                                    <div class="secondary-content">
-                                        <span class="black-text">9-18</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="collection-item">
-                                <div>Środa
-                                    <div class="secondary-content">
-                                        <span class="black-text">9-18</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="collection-item">
-                                <div>Czwartek
-                                    <div class="secondary-content">
-                                        <span class="black-text">9-18</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="collection-item">
-                                <div>Piątek
-                                    <div class="secondary-content">
-                                        <span class="black-text">9-18</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="collection-item">
-                                <div>Sobota
-                                    <div class="secondary-content">
-                                        <span class="black-text">9-18</span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="collection-item">
-                                <div>Niedziela
-                                    <div class="secondary-content">
-                                        <span class="black-text">9-18</span>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
+            <div class="carousel gallery__carousel">
+                <a class="gallery__carousel--item carousel-item modal-trigger" href="#modal1">
+                    <img src="http://lh3.googleusercontent.com/--Eo4Pcyx9Pg41gpI8XoeLz5rhWeVBep2NFrK2IMw3hiUyecSShP6-vp5DAwS-at7busXB1B=w320-h320-n-no-v1">
+                </a>
+                <a class="gallery__carousel--item carousel-item modal-trigger" href="#modal1">
+                    <img src="http://lh3.googleusercontent.com/oGgpVUxYrDHPvKNDT0aJ7b3PBCX6KSqQ0zx76HGcB-OErL65gFMRPNnE6tZYlEsPl8c2tb7A=w320-h320-n-no-v1">
+                </a>
+                <a class="gallery__carousel--item carousel-item modal-trigger" href="#modal1">
+                    <img src="http://lh3.googleusercontent.com/BIzkhz3DYQ_mbdzIfE7x352C4kjyIAvaRLmbLwQzm0-zzYWBfe6GOtg4GoiBgLsvm5aTCul3=w320-h320-n-no-v1">
+                </a>
+                <a class="gallery__carousel--item carousel-item modal-trigger" href="#modal1">
+                    <img src="http://lh3.googleusercontent.com/-3d34J3HxcrjXHal9iBZK25BzeQs_oe4G-OxGtbThq5Afkf6VLjn-HbRionyzD3DjLcOu7XJ=w320-h320-n-no-v1">
+                </a>
+            </div>
+            <div id="modal1" class="modal gallery__carousel--modal">
+                <img class="gallery__carousel--modal-image" src="http://lh3.googleusercontent.com/-3d34J3HxcrjXHal9iBZK25BzeQs_oe4G-OxGtbThq5Afkf6VLjn-HbRionyzD3DjLcOu7XJ=w320-h320-n-no-v1">
             </div>
         </div>
     </section>
 
-
-
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-    <script src="dist/js/bundle.js"></script>
+    <script src="dist/main.js"></script>
 </body>
 
 </html>
