--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="assets/flexSliders/flexslider.css">
     <link rel="stylesheet" href="dist/main.css">
 </head>
 
@@ -114,7 +115,7 @@
         </div>
     </section>
 
-    <section class="gallery black" id="gallery">
+    <!-- <section class="gallery black" id="gallery">
         <div class="gallery__indicator">
                 <div class="left">
                     <a href="" class="gallery__indicator--prev gallery__indicator--direction waves-effect waves-light">
@@ -148,6 +149,46 @@
             <div id="modal1" class="modal gallery__carousel--modal">
                 <i class="white-text modal-close waves-effect waves-green btn-fla medium material-icons right">close</i>
             </div>
+        </div>
+    </section> -->
+
+    <section class="gallery black" id="gallery">
+        <div class="container gallery__wrapper flexslider transparent">
+            <div class="gallery__indicator">
+                <a href="" class="gallery__indicator--direction gallery__indicator--direction-left waves-effect waves-light">
+                    <i class="white-text material-icons gallery__indicator--direction-icon">chevron_left</i>
+                </a>
+            </div>
+            <ul class="gallery__slides slides">
+                <li>
+                    <a class="gallery__slides--image modal-trigger" href="#modal1">
+                        <img src="http://lh3.googleusercontent.com/--Eo4Pcyx9Pg41gpI8XoeLz5rhWeVBep2NFrK2IMw3hiUyecSShP6-vp5DAwS-at7busXB1B=w1024-h768-n-no-v1">
+                    </a>
+                </li>
+                <li>
+                    <a class="gallery__slides--image modal-trigger" href="#modal1">
+                        <img src="http://lh3.googleusercontent.com/oGgpVUxYrDHPvKNDT0aJ7b3PBCX6KSqQ0zx76HGcB-OErL65gFMRPNnE6tZYlEsPl8c2tb7A=w1024-h768-n-no-v1">
+                    </a>
+                </li>
+                <li>
+                    <a class="gallery__slides--image modal-trigger" href="#modal1">
+                        <img src="http://lh3.googleusercontent.com/-3d34J3HxcrjXHal9iBZK25BzeQs_oe4G-OxGtbThq5Afkf6VLjn-HbRionyzD3DjLcOu7XJ=w1024-h768-n-no-v1">
+                    </a>
+                </li>
+                <li>
+                    <a class="gallery__slides--image modal-trigger" href="#modal1">
+                        <img src="http://lh3.googleusercontent.com/BIzkhz3DYQ_mbdzIfE7x352C4kjyIAvaRLmbLwQzm0-zzYWBfe6GOtg4GoiBgLsvm5aTCul3=w1024-h768-n-no-v1">
+                    </a>
+                </li>
+            </ul>
+            <div class="gallery__indicator">
+                <a href="" class="gallery__indicator--direction gallery__indicator--direction-right waves-effect waves-light">
+                    <i class="white-text material-icons gallery__indicator--direction-icon">chevron_right</i>
+                </a>
+            </div>
+        </div>
+        <div id="modal1" class="modal gallery__carousel--modal">
+            <i class="white-text modal-close waves-effect waves-green btn-fla medium material-icons right">close</i>
         </div>
     </section>
 
@@ -201,7 +242,7 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="assets/flexSliders/jquery.flexslider-min.js"></script>
     <script src="dist/main.js"></script>
 </body>
-
 </html>
